Added PE to demos

--- a/demo/asset_library.html
+++ b/demo/asset_library.html
@@ -160,6 +160,25 @@
     </li>
     
 
+    <li class="asset" onclick="openDetails('6066920')" 
+        data-id="6066920" data-name-orig="[Free] BUDDYWORKS ポーズシステム" data-name-trans="[Free] BUDDYWORKS Pose System" 
+        data-author-orig="BUDDYWORKS" data-author-trans="" data-img="BoothDownloaderOut/6066920/a3ff984a-95d5-4686-a994-48aef8db3cab_base_resized.jpg" 
+        data-all-images='["BoothDownloaderOut/6066920/a3ff984a-95d5-4686-a994-48aef8db3cab_base_resized.jpg", "BoothDownloaderOut/6066920/4b79a203-c429-44ac-9f02-24bf568a403f_base_resized.jpg", "BoothDownloaderOut/6066920/17929172-57ed-4e35-b583-ed5947585c60_base_resized.jpg", "BoothDownloaderOut/6066920/7da5abdf-f072-462a-9bbc-793c00875c02_base_resized.jpg", "BoothDownloaderOut/6066920/072346cf-4eca-4e35-8626-fd1281960cf3_base_resized.jpg", "BoothDownloaderOut/6066920/fde2ad14-bfa6-44b2-8613-8392f0a937b5_base_resized.jpg", "BoothDownloaderOut/6066920/db31760e-d2db-45e2-9d11-37646aa0ecab_base_resized.jpg", "BoothDownloaderOut/6066920/c3858959-3e5f-4740-87a0-e498c2579ec4_base_resized.jpg", "BoothDownloaderOut/6066920/2580fde4-9ece-45ee-bb52-d3209b6a71e7_base_resized.jpg", "BoothDownloaderOut/6066920/e11d2fd6-a3f4-4b21-9fb0-b64638fa3253_base_resized.jpg"]'
+        data-bytes="0" data-files='[]'
+        data-tags='["\u30a2\u30cb\u30e1\u30fc\u30b7\u30e7\u30f3", "\u840c", "VRChat\u53ef", "VRC\u60f3\u5b9a\u30e2\u30c7\u30eb", "vrchat\u5411\u3051", "poses", "moe\u7528", "moe\u3061\u3083\u3093", "buddyworks"]' data-adult="false" 
+        data-search='6066920 [free] buddyworks ポーズシステム [free] buddyworks pose system buddyworks  アニメーション 萌 vrchat可 vrc想定モデル vrchat向け poses moe用 moeちゃん buddyworks ' data-folder="BoothDownloaderOut/6066920/Binary" data-booth-url="https://buddyworks.booth.pm/items/6066920"
+        data-filecount="0" data-wish="41" data-time="1766762334"
+        data-price-value="200.0" data-price-currency="JPY">
+        <div class="image-container"><div class="asset-id-tag">#6066920</div><img class="image-thumbnail" src="BoothDownloaderOut/6066920/a3ff984a-95d5-4686-a994-48aef8db3cab_base_resized.jpg"></div>
+        <img class="image-backglow" src="BoothDownloaderOut/6066920/a3ff984a-95d5-4686-a994-48aef8db3cab_base_resized.jpg"><div class="content">
+            <div class="name"><span class="name-primary">[Free] BUDDYWORKS ポーズシステム</span></div>
+            <div class="author-label">by <b class="author-primary">BUDDYWORKS</b></div>
+            <div class="stats"><span>0.0B</span><span class="file-label-dynamic"></span></div>
+            <div class="tag-row"><span class="tag-pill">アニメーション</span><span class="tag-pill">萌</span><span class="tag-pill">VRChat可</span><span class="tag-pill">VRC想定モデル</span><span class="tag-pill">vrchat向け</span><span class="tag-pill">poses</span><span class="tag-pill">moe用</span><span class="tag-pill">moeちゃん</span><span class="tag-pill">buddyworks</span></div>
+        </div>
+    </li>
+    
+
     <li class="asset" onclick="openDetails('6089367')" 
         data-id="6089367" data-name-orig="「Folklore」Swimsuit 「5体のアバターに対応」" data-name-trans="&quot;Folklore&quot; Swimsuit &quot;Compatible with 5 avatars&quot;" 
         data-author-orig="BUDDYWORKS" data-author-trans="" data-img="BoothDownloaderOut/6089367/fbc21f22-0d39-4f6d-b026-b3355a87835a_base_resized.jpg" 
