--- a/demo/asset_library.html
+++ b/demo/asset_library.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booth Asset Library</title>
+    <link rel="icon" type="image/svg+xml" href="web_data/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="web_data/style.css" />
     <style>
@@ -419,7 +420,7 @@
             const viewer = document.getElementById('fullscreenImageViewer');
             viewer.classList.remove('active');
             setTimeout(() => {
-                if(!viewer.classList.contains('active')) viewer.classList.remove('visible');
+                if(!viewer.classList.contains('active')) viewer.remove('visible');
             }, 400);
         }
         function closeModal(skipHistory = false) { 
